3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugin/plugin_python.c: change 'long long' so 'sint64' (typedef).
Ryo Saeba 2004-11-29

common/object.c: apply patch #1066665 courtesy Salathar for exits with
   blockview 1.
lib/formulae: apply patch #1064643 courtesy Salathar to fix broken formulae.
lib/wizhelp/speed: remove file, command changed name.
lib/wizhelp/server_speed: updated 'speed' command help.
server/c_wiz.c: apply patch #1063051 courtesy Salathar to update muzzle message.
server/commands.c: apply patch #1052224 courtesy Casper to change
   'speed' to 'server_speed' as name is ambiguous.
Ryo Saeba 2004-11-25

common/loader.l: Fix passed size in FAST_SAVE_LONG() - was one too long,
   causing truncated diffs after "dam_modifier" entry.
Andreas Kirschbaum 2004-11-15

This commit adds the functionality of patch 991916, although the patch
as submitted was used as a baseline to start from.
include/sproto.h: rebuilt
server/c_chat.c: Rename command_chat() to command_tell_all() which takes
   a few more optional parameters.  Add command_shout() and command_chat()
   that invoke command_tell_all() with the appropriate changes.
server/commands.c: Add chat to list of command table.
MSW 2004-11-08

plugin/plugin_python.c: Run the script python_init.py right after
   initializing the interpreter.
Andreas Kirschbaum 2004-10-21

server/c_party.c: actually warn party members of password change. Notify when
   someone joins party.
Ryo 2004-10-21

plugin/plugin_python.c, plugin/include/plugin_python.h, server/plugins.c:
   Fix comments, change whitespace.
Andreas Kirschbaum 2004-10-19

Fix some bugs I introduced in my last commit.